Sec13_ChapXX: code optimizations